--- a/form.html
+++ b/form.html
@@ -61,7 +61,7 @@
             </td>
         </tr>
         <tr>
-            <th class="mau">Chọn sản phẩm tham gia</th>
+            <th class="mau">Chọn sản phẩm vận chuyển</th>
             <td>
                 <select>
                     <option value="1">Tủ lạnh</option>
@@ -72,7 +72,7 @@
             </td>
         </tr>
         <tr>
-            <th class="mau">Số người dự đoán</th>
+            <th class="mau">Số người móm</th>
             <th class="mau">
                 <form>
                     <label for="fullname"></label>
@@ -81,7 +81,7 @@
             </th>
         </tr>
         <tr>
-            <td colspan="2">
+            <td colspan="2" id="dongy">
                 <button type="button" onclick="register()">Đồng ý</button>
             </td>
         </tr>
