--- a/bai3.html
+++ b/bai3.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bai 3</title>
     <link rel="stylesheet" href="./css/bai3.css">
+    
 </head>
 <body>
     <div class="content">
@@ -13,7 +14,7 @@
           Hình ảnh và phụ đề. Hình ảnh và phụ đề. Hình ảnh và phụ đề. Hình ảnh và phụ đề.
           Hình ảnh và phụ đề. Hình ảnh và phụ đề. Hình ảnh và phụ đề. Hình ảnh và phụ đề.
         </p>
-        <div class="image-container">
+        <div class="bet">
           <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/85/Tour_Eiffel_Wikimedia_Commons_%28cropped%29.jpg/240px-Tour_Eiffel_Wikimedia_Commons_%28cropped%29.jpg" alt="Eiffel Tower">
           <p class="caption">Scale model of the Eiffel Tower in Parc Mini-France</p>
         </div>
